--- a/index.html
+++ b/index.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<style>
+			body {
+				background-color: aquamarine;
+				text-align: center;
+				margin: auto;
+			}
+		</style>
 		<title>Webserver</title>
 	</head>
 	<body>
