--- a/html/404.html
+++ b/html/404.html
@@ -3,7 +3,7 @@
 <html>
   <head>
     <title>Webserv</title>
-    <link rel="shortcut icon" href="/home/lucie/Code/site/images/favicon.png"/>
+    <link rel="shortcut icon" href="./images/favicon.png"/>
     <meta charset="utf-8" />
 	<style>
 		:root {
