--- a/html/index.html
+++ b/html/index.html
@@ -1,17 +1,45 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
+
 <html>
-	<head>
-		<style>
-			body {
-				background-color: aquamarine;
-				text-align: center;
-				margin: auto;
-			}
-		</style>
-		<title>Webserver</title>
-	</head>
-	<body>
-		<h1>Welcome to our Webserver</h1>
-		<p>Yes we did !</p>
-	</body>
+  <head>
+    <title>Webserv</title>
+    <link rel="shortcut icon" href="images/favicon.png"/>
+    <meta charset="utf-8"/>
+	<link rel="stylesheet" href="css/main.css"/>
+    <script src="https://kit.fontawesome.com/58cd01063a.js" crossorigin="anonymous"></script>
+ </head>
+<header>
+	<div class="logo">
+		<div class="title">42</div>
+		<div class="titlename">Webserv</div>
+	</div>
+	<span class="buttonTab active">
+        <a href="index.html"><i class="fas fa-home"></i><span class="tabname">Index</span></a>
+    </span>
+	<span class="buttonTab">
+        <a href="form.html"><i class="fas fa-file"></i><span class="tabname">Form</span></a>
+    </span>
+	<span class="buttonTab">
+        <a href="https://github.com/LucieLeBriquer/webserv.git"><i class="fab fa-github"></i><span class="tabname">Source</span></a>
+    </span>
+</header>
+
+<body>
+<div class="vertical">
+		<center>
+		<h6 class="title404_1">Webserv</h6><br><br><br>
+		<h6 class="title404_2">Yes, we did it !</h6><br><br><br>
+		Small description
+</div>
+</body>
+
+<footer>
+	<ul class="footer">
+		<li></li>
+		<li><a href="https://github.com/MassiliaB" target="_blank"><i class="fab fa-github"></i> masboula</a></li>
+		<li><a href="https://github.com/loupascreau" target="_blank"><i class="fab fa-github"></i> lpascreau</a></li>
+		<li><a href="https://github.com/LucieLeBriquer" target="_blank"><i class="fab fa-github"></i> lle-briq</a></li>
+		<li></li>
+	</ul>
+</footer>
 </html>
