--- a/html/404.html
+++ b/html/404.html
@@ -10,8 +10,9 @@
  </head>
 <header>
 	<div class="logo">
-		<div class="title">42</div>
+		<img src="images/logo.png">
 		<div class="titlename">Webserv</div>
+		<div class="title">euses</div>
 	</div>
 	<span class="buttonTab">
         <a href="index.html"><i class="fas fa-home"></i><span class="tabname">Index</span></a>
