cgi execution side

--- a/html/form.html
+++ b/html/form.html
@@ -37,7 +37,7 @@
 				<input name="to" value="Mom">
 			</div>
 			<div>
-				<button>Send my greetings</button>
+				<button>Send</button>
 			</div>
 		</form>
 	</div>
