redir almost ok

--- a/html/form.html
+++ b/html/form.html
@@ -27,7 +27,7 @@
 
 <body class="main">
 	<div class="vertical">
-		<form method="post" action="php-example.php">
+		<form method="get" action="php-example.php">
 			<div class="flex">
 				<label for="say">What greeting do you want to say ?</label>
 				<input name="say" id="say" value="Hi">
