--- a/html/index.html
+++ b/html/index.html
@@ -21,6 +21,9 @@
         <a href="form.html"><i class="fas fa-file"></i><span class="tabname">Form</span></a>
     </span>
 	<span class="buttonTab">
+        <a href="post.html"><i class="fas fa-file"></i><span class="tabname">Post</span></a>
+    </span>
+	<span class="buttonTab">
         <a href="https://github.com/LucieLeBriquer/webserv.git"><i class="fab fa-github"></i><span class="tabname">Source</span></a>
     </span>
 </header>
