--- a/html/post.html
+++ b/html/post.html
@@ -27,13 +27,13 @@
 
 <body class="main">
 	<div class="vertical">
-		<form method="post" action="post.php">
+		<form method="get" action="post.php">
 			<div class="flex">
-				What greeting do you want to say ?
+				<label for="username">What's your naame ?</label>
 				<input name="username" type="text">
 			</div>
 			<div class="flex">
-				Who do you want to say it to ?
+				<label for="city">Where do you live ?</label>
 				<input name="city" type="text">
 			</div>
 			<div>
