change default page and 302, remove useless html

--- a/html/form.html
+++ b/html/form.html
@@ -3,14 +3,14 @@
 <html>
   <head>
     <title>Webserv</title>
-    <link rel="shortcut icon" href="images/favicon.png"/>
+    <link rel="shortcut icon" href="https://lucie-lebriquer.fr/webserv/favicon.png"/>
     <meta charset="utf-8"/>
-	<link rel="stylesheet" href="css/main.css"/>
+	<link rel="stylesheet" href="https://lucie-lebriquer.fr/webserv/main.css"/>
     <script src="https://kit.fontawesome.com/58cd01063a.js" crossorigin="anonymous"></script>
- </head>
+  </head>
 <header>
 	<div class="logo">
-		<img src="images/logo.png">
+		<img src="https://lucie-lebriquer.fr/webserv/logo.png">
 		<div class="titlename">Webserv</div>
 		<div class="title">euses</div>
 	</div>
@@ -37,7 +37,7 @@
 				<input name="to" value="Mom">
 			</div>
 			<div>
-				<button>Send</button>
+				<button>Send my greetings</button>
 			</div>
 		</form>
 	</div>
