--- a/html/403.html
+++ b/html/403.html
@@ -28,11 +28,10 @@
 <body>
 <div class="vertical">
 	<center>
-	<h6 class="title404_1">400</h6><br><br><br>
-	<h6 class="title404_2">Bad Request</h6><br><br><br>
-	The server cannot process the request due to something<br>
-	that is perceived to be a client error (e.g., malformed request syntax,<br>
-	invalid request message framing, or deceptive request routing).
+	<h6 class="title404_1">403</h6><br><br><br>
+	<h6 class="title404_2">Forbiden</h6><br><br><br>
+	You don't have permission to access<br>
+	this resource.
 </div>
 </body>
 
