--- a/html/index.html
+++ b/html/index.html
@@ -3,14 +3,14 @@
 <html>
   <head>
     <title>Webserv</title>
-    <link rel="shortcut icon" href="images/favicon.png"/>
+    <link rel="shortcut icon" href="https://lucie-lebriquer.fr/webserv/favicon.png"/>
     <meta charset="utf-8"/>
-	<link rel="stylesheet" href="css/main.css"/>
+	<link rel="stylesheet" href="https://lucie-lebriquer.fr/webserv/main.css"/>
     <script src="https://kit.fontawesome.com/58cd01063a.js" crossorigin="anonymous"></script>
- </head>
+  </head>
 <header>
 	<div class="logo">
-		<img src="images/logo.png">
+		<img src="https://lucie-lebriquer.fr/webserv/logo.png">
 		<div class="titlename">Webserv</div>
 		<div class="title">euses</div>
 	</div>
@@ -19,9 +19,6 @@
     </span>
 	<span class="buttonTab">
         <a href="form.html"><i class="fas fa-file"></i><span class="tabname">Form</span></a>
-    </span>
-	<span class="buttonTab">
-        <a href="post.html"><i class="fas fa-file"></i><span class="tabname">Post</span></a>
     </span>
 	<span class="buttonTab">
         <a href="https://github.com/LucieLeBriquer/webserv.git"><i class="fab fa-github"></i><span class="tabname">Source</span></a>
