new page for downloads

--- a/html/index.html
+++ b/html/index.html
@@ -33,8 +33,7 @@
 <div class="vertical">
 	<center>
 	<h6 class="title404_1">Webserv</h6><br><br><br>
-	<h6 class="title404_2">Yes, we did it !</h6><br><br><br>
-	Small description
+	<h6 class="title404_2">Yes, we did it !</h6>
 </div>
 </body>
 
