--- a/html/deleted.html
+++ b/html/deleted.html
@@ -14,7 +14,7 @@
 		<div class="titlename">Webserv</div>
 		<div class="title">euses</div>
 	</div>
-	<span class="buttonTab">
+	<span class="buttonTab active">
         <a href="index.html"><i class="fas fa-home"></i><span class="tabname">Index</span></a>
     </span>
 	<span class="buttonTab">
@@ -27,8 +27,7 @@
 
 <body>
 <div class="vertical">
-	<center>
- 	<h1>File deleted.</h1></div>
+		<h6 class="title404_2">deleted</h6><br><br><br>
 </body>
 
 <footer>
