--- a/html/index.html
+++ b/html/index.html
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" href="https://lucie-lebriquer.fr/webserv/main.css"/>
     <script src="https://kit.fontawesome.com/58cd01063a.js" crossorigin="anonymous"></script>
   </head>
+<div class=whiteband></div>
 <header>
 	<div class="logo">
 		<img src="https://lucie-lebriquer.fr/webserv/logo.png">
@@ -21,16 +22,18 @@
         <a href="form.html"><i class="fas fa-file"></i><span class="tabname">Form</span></a>
     </span>
 	<span class="buttonTab">
+        <a href="download.html"><i class="fas fa-download"></i><span class="tabname">Download</span></a>
+    </span>
+	<span class="buttonTab">
         <a href="https://github.com/LucieLeBriquer/webserv.git"><i class="fab fa-github"></i><span class="tabname">Source</span></a>
     </span>
 </header>
 
 <body>
 <div class="vertical">
-		<center>
-		<h6 class="title404_1">Webserv</h6><br><br><br>
-		<h6 class="title404_2">Yes, we did it !</h6><br><br><br>
-		Small description
+	<center>
+	<h6 class="title404_1">Webserv</h6><br><br><br>
+	<h6 class="title404_2">Yes, we did it !</h6>
 </div>
 </body>
 
