maj download page

--- a/html/download.html
+++ b/html/download.html
@@ -31,10 +31,10 @@
 
 <body class="main">
 	<center>
-	<img src="/download/lama.jpg"><br>
-	<a href="/download/lama.jpg" download="lama.jpg"><span class="button"><i class="fas fa-download"></i> Download</span></a>
-	<img src="/download/lama.jpg"><br>
-	<a href="/download/lama.jpg" download="lama.jpg"><span class="button"><i class="fas fa-download"></i> Download</span></a>
+	<img src="./download/lama.jpg"><br>
+	<a href="./download/lama.jpg" download="lama.jpg"><span class="button"><i class="fas fa-download"></i> Download</span></a>
+	<img src="./download/lama.jpg"><br>
+	<a href="./download/lama.jpg" download="lama.jpg"><span class="button"><i class="fas fa-download"></i> Download</span></a>
 </body>
 
 <footer>
