update download page

--- a/html/download.html
+++ b/html/download.html
@@ -46,9 +46,9 @@
 		</div>
 	</div>
 	<h2>Upload</h2>
-	<form action="/action_page.php">
-		<input type="file" id="myFile" name="filename">
-		<input type="submit">
+	<form action="/action_page.php" class="upload">
+		<input type="file" name="filename">
+		<button>Start upload</button>
 	</form>
 
 </body>
