recup de lucie, fichier download dispo

--- a/html/download.html
+++ b/html/download.html
@@ -18,10 +18,10 @@
 	<span class="buttonTab">
         <a href="index.html"><i class="fas fa-home"></i><span class="tabname">Index</span></a>
     </span>
-	<span class="buttonTab active">
+	<span class="buttonTab">
         <a href="form.html"><i class="fas fa-file"></i><span class="tabname">Form</span></a>
     </span>
-	<span class="buttonTab">
+	<span class="buttonTab active">
         <a href="download.html"><i class="fas fa-download"></i><span class="tabname">Download</span></a>
     </span>
 	<span class="buttonTab">
@@ -30,21 +30,27 @@
 </header>
 
 <body class="main">
-	<div class="vertical">
-		<form method="post" action="php-example.php">
-			<div class="flex">
-				<label for="say">What greeting do you want to say ?</label>
-				<input name="say" id="say" value="Hi">
-			</div>
-			<div class="flex">
-				<label for="to">Who do you want to say it to ?</label>
-				<input name="to" value="Mom">
-			</div>
-			<div>
-				<button>Send my greetings</button>
-			</div>
-		</form>
+	<h2>Download</h2>
+	<div class="columns">
+		<div>
+			<img src="./download/lama.jpg"><br>
+			<a href="./download/lama.jpg" download="lama.jpg"><span class="button"><i class="fas fa-download"></i> Download</span></a>
+		</div>
+		<div>
+			<img src="./download/lamaNB.jpg"><br>
+			<a href="./download/lamaNB.jpg" download="lamaNB.jpg"><span class="button"><i class="fas fa-download"></i> Download</span></a>
+		</div>
+		<div>
+			<img src="./download/lamaFat.jpg"><br>
+			<a href="./download/lamaFat.jpg" download="lamaFat.jpg"><span class="button"><i class="fas fa-download"></i> Download</span></a>
+		</div>
 	</div>
+	<h2>Upload</h2>
+	<form action="/action_page.php" class="upload">
+		<input type="file" name="filename">
+		<button>Start upload</button>
+	</form>
+
 </body>
 
 <footer>
