--- a/html/deleted.html
+++ b/html/deleted.html
@@ -8,17 +8,21 @@
 	<link rel="stylesheet" href="https://lucie-lebriquer.fr/webserv/main.css"/>
     <script src="https://kit.fontawesome.com/58cd01063a.js" crossorigin="anonymous"></script>
   </head>
+<div class=whiteband></div>
 <header>
 	<div class="logo">
 		<img src="https://lucie-lebriquer.fr/webserv/logo.png">
 		<div class="titlename">Webserv</div>
 		<div class="title">euses</div>
 	</div>
-	<span class="buttonTab active">
+	<span class="buttonTab">
         <a href="index.html"><i class="fas fa-home"></i><span class="tabname">Index</span></a>
     </span>
 	<span class="buttonTab">
         <a href="form.html"><i class="fas fa-file"></i><span class="tabname">Form</span></a>
+    </span>
+	<span class="buttonTab">
+        <a href="download.html"><i class="fas fa-download"></i><span class="tabname">Download</span></a>
     </span>
 	<span class="buttonTab">
         <a href="https://github.com/LucieLeBriquer/webserv.git"><i class="fab fa-github"></i><span class="tabname">Source</span></a>
@@ -27,7 +31,10 @@
 
 <body>
 <div class="vertical">
-		<h6 class="title404_2">deleted</h6><br><br><br>
+	<center>
+		<h6 class="title404_2">Deleted</h6><br><br><br>
+	</center>
+</div>
 </body>
 
 <footer>
