download ok, ajout des sec fetch

--- a/html/download.html
+++ b/html/download.html
@@ -44,6 +44,10 @@
 			<img src="./download/lamaFat.jpg"><br>
 			<a href="./download/lamaFat.jpg" download="lamaFat.jpg"><span class="button"><i class="fas fa-download"></i> Download</span></a>
 		</div>
+		<div>
+			<img src="./download/icon_pdf.png" width="390"><br>
+			<a href="./download/subject.pdf" download="subject.pdf"><span class="button"><i class="fas fa-download"></i> Download</span></a>
+		</div>
 	</div>
 	<h2>Upload</h2>
 	<form action="/action_page.php" class="upload">
