--- a/html/download.html
+++ b/html/download.html
@@ -30,11 +30,27 @@
 </header>
 
 <body class="main">
-	<center>
-	<img src="/download/lama.jpg"><br>
-	<a href="/download/lama.jpg" download="lama.jpg"><span class="button"><i class="fas fa-download"></i> Download</span></a>
-	<img src="/download/lama.jpg"><br>
-	<a href="/download/lama.jpg" download="lama.jpg"><span class="button"><i class="fas fa-download"></i> Download</span></a>
+	<h2>Download</h2>
+	<div class="columns">
+		<div>
+			<img src="./download/lama.jpg"><br>
+			<a href="./download/lama.jpg" download="lama.jpg"><span class="button"><i class="fas fa-download"></i> Download</span></a>
+		</div>
+		<div>
+			<img src="./download/lamaNB.jpg"><br>
+			<a href="./download/lamaNB.jpg" download="lamaNB.jpg"><span class="button"><i class="fas fa-download"></i> Download</span></a>
+		</div>
+		<div>
+			<img src="./download/lamaFat.jpg"><br>
+			<a href="./download/lamaFat.jpg" download="lamaFat.jpg"><span class="button"><i class="fas fa-download"></i> Download</span></a>
+		</div>
+	</div>
+	<h2>Upload</h2>
+	<form action="/action_page.php" class="upload">
+		<input type="file" name="filename">
+		<button>Start upload</button>
+	</form>
+
 </body>
 
 <footer>
