upload en cours

--- a/html/download.html
+++ b/html/download.html
@@ -50,7 +50,7 @@
 		</div>
 	</div>
 	<h2>Upload</h2>
-	<form action="/action_page.php" class="upload">
+	<form action="" class="upload" method="post" enctype="multipart/form-data">
 		<input type="file" name="filename">
 		<button>Start upload</button>
 	</form>
