--- a/html/form.html
+++ b/html/form.html
@@ -31,7 +31,7 @@
 
 <body class="main">
 	<div class="vertical">
-		<form method="post" action="php-example.php">
+		<form method="post" action="php-example.php" enctype="multipart/form-data">
 			<div class="flex">
 				<label for="say">What greeting do you want to say ?</label>
 				<input name="say" id="say" value="Hi">
