--- a/html/download.html
+++ b/html/download.html
@@ -50,9 +50,11 @@
 		</div>
 	</div>
 	<h2>Upload</h2>
-	<form action="" class="upload" method="post" enctype="multipart/form-data">
-		<input type="file" name="filename">
-		<button>Start upload</button>
+
+	<form action="upload.php" class="upload" method="post" enctype="multipart/form-data">
+		Select image to upload:
+		<input type="file" name="fileToUpload" id="fileToUpload">
+		<input type="submit" value="Upload Image" name="submit">
 	</form>
 
 </body>
