--- a/html/deleted.html
+++ b/html/deleted.html
@@ -22,7 +22,7 @@
         <a href="form.html"><i class="fas fa-file"></i><span class="tabname">Form</span></a>
     </span>
 	<span class="buttonTab">
-        <a href="download.html"><i class="fas fa-download"></i><span class="tabname">Download</span></a>
+		<a href="upload.html"><i class="fas fa-upload"></i><span class="tabname">Upload</span></a>
     </span>
 	<span class="buttonTab">
         <a href="https://github.com/LucieLeBriquer/webserv.git"><i class="fab fa-github"></i><span class="tabname">Source</span></a>
