--- a/html/form.html
+++ b/html/form.html
@@ -22,7 +22,7 @@
         <a href="form.html"><i class="fas fa-file"></i><span class="tabname">Form</span></a>
     </span>
 	<span class="buttonTab">
-        <a href="download.html"><i class="fas fa-download"></i><span class="tabname">Download</span></a>
+		<a href="upload.html"><i class="fas fa-upload"></i><span class="tabname">Upload</span></a>
     </span>
 	<span class="buttonTab">
         <a href="https://github.com/LucieLeBriquer/webserv.git"><i class="fab fa-github"></i><span class="tabname">Source</span></a>
@@ -31,7 +31,7 @@
 
 <body class="main">
 	<div class="vertical">
-		<form method="post" action="php-example.php" enctype="multipart/form-data">
+		<form method="post" action="./php/php-example.php" enctype="multipart/form-data">
 			<div class="flex">
 				<label for="say">What greeting do you want to say ?</label>
 				<input name="say" id="say" value="Hi">
