--- a/html/form.html
+++ b/html/form.html
@@ -35,11 +35,11 @@
 		<form method="post" action="./php/php-example.php" enctype="multipart/form-data">
 			<div class="flex">
 				<label for="say">What greeting do you want to say ?</label>
-				<input name="say" id="say" value="Hi">
+				<input type="text" name="say" id="say" value="Hi">
 			</div>
 			<div class="flex">
 				<label for="to">Who do you want to say it to ?</label>
-				<input name="to" value="Mom">
+				<input type="text" name="to" value="Mom">
 			</div>
 			<div>
 				<button>Send my greetings</button>
@@ -51,11 +51,11 @@
 		<form method="get" action="./php/php-example.php" enctype="multipart/form-data">
 			<div class="flex">
 				<label for="say">What greeting do you want to say ?</label>
-				<input name="say" id="say" value="Hi">
+				<input type="text" name="say" id="say" value="Hi">
 			</div>
 			<div class="flex">
 				<label for="to">Who do you want to say it to ?</label>
-				<input name="to" value="Mom">
+				<input type="text" name="to" value="Mom">
 			</div>
 			<div>
 				<button>Send my greetings</button>
