--- a/html/upload.html
+++ b/html/upload.html
@@ -68,7 +68,7 @@
 	<ul class="footer">
 		<li></li>
 		<li><a href="https://github.com/MassiliaB" target="_blank"><i class="fab fa-github"></i> masboula</a></li>
-		<li><a href="https://github.com/loupascreau" target="_blank"><i class="fab fa-github"></i> lpascreau</a></li>
+		<li><a href="https://github.com/loupascreau" target="_blank"><i class="fab fa-github"></i> lpascrea</a></li>
 		<li><a href="https://github.com/LucieLeBriquer" target="_blank"><i class="fab fa-github"></i> lle-briq</a></li>
 		<li></li>
 	</ul>
