--- a/html/form.html
+++ b/html/form.html
@@ -32,7 +32,7 @@
 <body class="main">
 		<h3>POST</h3>
 		<h4>multipart</h4>
-		<form method="post" action="./php/php-example.php" enctype="multipart/form-data">
+		<form method="post" action="./php/form.php" enctype="multipart/form-data">
 			<div class="flex">
 				<label for="say">What greeting do you want to say ?</label>
 				<input type="text" name="say" id="say" value="Hi">
@@ -48,7 +48,7 @@
 		<br><br><br>
 
 		<h4>classic</h4>
-		<form method="post" action="./php/php-example.php">
+		<form method="post" action="./php/form.php">
 			<div class="flex">
 				<label for="say">What greeting do you want to say ?</label>
 				<input type="text" name="say" id="say" value="Hey">
@@ -64,7 +64,7 @@
 		<br><br><br>
 
 		<h3>GET</h3>
-		<form method="get" action="./php/php-example.php">
+		<form method="get" action="./php/form.php">
 			<div class="flex">
 				<label for="say">What greeting do you want to say ?</label>
 				<input type="text" name="say" id="say" value="Hello">
